--- a/index.html
+++ b/index.html
@@ -1,3 +1,32 @@
-formaeffimera
+<!DOCTYPE html>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test Font Inter</title>
+    <link rel="stylesheet" href="cssfonts/fontstyles.css"> <!-- Collega il CSS con i font -->
+    <style>
+        /* Stili personalizzati per la posizione e formattazione del testo */
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: flex-start;
+            align-items: flex-start;
+            height: 100vh;
+        }
 
-<link rel="stylesheet" href="cssfonts/fontstyles.css">
+        .fromaeffimera-text {
+            font-family: 'Inter', sans-serif;
+            font-weight: 400;
+            font-size: 100pt;
+            color: black;
+            text-transform: uppercase;
+            margin: 20px;
+        }
+    </style>
+</head>
+<body>
+    <p class="fromaeffimera-text">FORMÆFFIMERA</p>
+</body>
+</html>
