--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
             justify-content: flex-start;
             align-items: flex-start;
             height: 100vh;
+            overflow-x: hidden; /* Evita lo scroll orizzontale */
+        }
+
+        .fromaeffimera-text {
+            font-family: 'Inter', sans-serif;
+            font-weight: 400;
+            font-size: 200pt;
+            color: black;
+            text-transform: uppercase;
+            margin: 20px;
+            white-space: break-spaces; /* Permette di andare a capo senza aggiungere trattini */
+            word-break: break-word; /* Spezza la parola se necessario */
         }
     </style>
 </head>
