--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
             text-transform: uppercase;
             white-space: normal; /* Permette al testo di andare a capo */
         }
+
+        /* Media Query per schermi piccoli (cellulari) */
+        @media (max-width: 768px) {
+            .fromaeffimera-text {
+                font-size: 100pt; /* Riduce la dimensione del font a 100pt su schermi piccoli */
+            }
+        }
     </style>
 </head>
 <body>
