--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
         /* Media Query per schermi piccoli (cellulari) */
         @media (max-width: 768px) {
             .fromaeffimera-text {
-                font-size: 80pt; /* Riduce la dimensione del font a 80pt su cellulari piccoli */
+                font-size: 80pt; /* Mantiene il font a 80pt su cellulari */
             }
             .text-container {
-                max-width: 100vw; /* Limita la larghezza massima al viewport per evitare lo scroll orizzontale */
                 padding: 10px; /* Riduce il padding per minimizzare i contorni */
             }
         }
