--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         /* Media Query per schermi piccoli (cellulari) */
         @media (max-width: 768px) {
             .fromaeffimera-text {
-                font-size: 80pt; /* Mantiene il font a 80pt su cellulari */
+                font-size: 90pt; /* Imposta il font a 90pt su cellulari */
             }
             .text-container {
                 padding: 10px; /* Riduce il padding per minimizzare i contorni */
