--- a/index.html
+++ b/index.html
@@ -7,20 +7,6 @@
     <link rel="icon" href="img/icon.png" type="image/png">
     <link rel="stylesheet" href="cssfonts/fontstyles.css">
     <style>
-        /* Importa i font Courier Prime Bold e Regular */
-        @font-face {
-            font-family: 'Courier Prime Bold';
-            src: url('fonts/CourierPrime-Bold.ttf') format('truetype');
-            font-weight: bold;
-            font-style: normal;
-        }
-        @font-face {
-            font-family: 'Courier Prime Regular';
-            src: url('fonts/CourierPrime-Regular.ttf') format('truetype');
-            font-weight: normal;
-            font-style: normal;
-        }
-
         /* Stili per il video di sfondo */
         .background-video {
             position: fixed;
@@ -29,14 +15,14 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            z-index: -1;
+            z-index: -1; /* Mette il video sotto il contenuto */
         }
 
         /* Stili per il corpo e il testo principale */
         body {
             margin: 0;
             padding: 0;
-            overflow-x: hidden;
+            overflow-x: hidden; /* Evita lo scroll orizzontale */
             display: flex;
             justify-content: flex-start;
             align-items: flex-start;
@@ -50,17 +36,17 @@
             position: fixed;
             top: 0;
             left: 0;
-            z-index: 1;
+            z-index: 1; /* Posiziona il testo sopra il video */
         }
 
         .fromaeffimera-text {
             font-family: 'Inter', sans-serif;
             font-weight: 400;
-            font-size: 250pt;
-            color: black !important;
+            font-size: 250pt; /* Dimensione per schermi grandi */
+            color: black !important; /* Colore nero */
             text-transform: uppercase;
+            line-height: 250pt; /* Interlinea ridotta solo per desktop */
             white-space: normal;
-            line-height: 250pt; /* Interlinea ridotta per la versione desktop */
         }
 
         /* Media Query per schermi medi (tablet) */
@@ -71,7 +57,7 @@
             }
         }
 
-        /* Media Query per schermi piccoli (cellulari) */
+        /* Media Query per schermi piccoli (smartphone) */
         @media (max-width: 768px) {
             .fromaeffimera-text {
                 font-size: 90pt;
@@ -82,7 +68,7 @@
             }
         }
 
-        /* Stili per la griglia */
+        /* Griglia adattiva per desktop */
         .grid-overlay {
             position: relative;
             top: 0;
@@ -90,52 +76,52 @@
             width: 100%;
             height: 100vh;
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); /* Celle quadrate adattive */
-            grid-auto-rows: minmax(100px, 1fr); /* Celle quadrate adattive */
+            grid-template-columns: repeat(3, 1fr); /* 3 colonne fisse */
+            grid-auto-rows: calc(100vw / 3); /* Altezza delle celle quadrata */
             overflow-y: auto;
             overflow-x: hidden;
-            z-index: 2;
+            z-index: 2; /* Posiziona la griglia sopra il testo principale */
             padding: 20px;
             box-sizing: border-box;
         }
 
-        /* Scritte bianche per la griglia */
+        /* Stili delle scritte bianche per la griglia */
         .grid-overlay div {
             display: flex;
             align-items: flex-start;
             justify-content: flex-start;
             padding: 10px;
-            box-sizing: border-box;
             color: white;
-            font-family: 'Courier Prime Bold', monospace;
+            font-family: 'Courier Prime Bold', monospace; /* Bold per desktop */
             font-weight: bold;
             hyphens: auto;
             overflow-wrap: break-word;
             text-align: left;
         }
 
-        /* Cambia font per schermi medi (tablet) */
+        /* Versione tablet: celle adattive al testo */
         @media (max-width: 1024px) {
+            .grid-overlay {
+                grid-template-columns: 1fr;
+                grid-auto-rows: auto;
+            }
             .grid-overlay div {
                 font-size: 18px;
-                font-family: 'Courier Prime Regular', monospace;
+                font-family: 'Courier Prime Regular', monospace; /* Regular per tablet */
                 font-weight: normal;
             }
         }
 
-        /* Cambia font per schermi piccoli (cellulari) */
+        /* Versione smartphone: celle adattive al testo */
         @media (max-width: 768px) {
+            .grid-overlay {
+                grid-template-columns: 1fr;
+                grid-auto-rows: auto;
+            }
             .grid-overlay div {
                 font-size: 26px;
-                font-family: 'Courier Prime Regular', monospace;
+                font-family: 'Courier Prime Regular', monospace; /* Regular per smartphone */
                 font-weight: normal;
-            }
-        }
-
-        /* Dimensioni del testo adattive */
-        @media (min-width: 1025px) {
-            .grid-overlay div {
-                font-size: 10px;
             }
         }
     </style>
